# Project_EPOCH

./: .gitignore  README.md  convert_sdf_to_hdf5_viking.py  epoch_postprocess.py  plot_laser_spectrum.py  plot_spectrum.py  plot_xy_energy_heatmap.py  pyproject.toml  sample output and dist_fn blocks  sample output and dist_fn blocks.txt  test_save_anim.py  thiele_injector  visualise_spectra.py
dev_test/: test_epydeck.py  test_epyscan.py
dev_test/test_dist_fn/sdf_files/: deck.status  (+1 more)
jupyter_notebooks/sdf_xarray/: animation_without_notebook.py  experimental_ground.ipynb  try_animation.py  tutorial_2_deal_with_data.ipynb
linear_breit_wheeler/single_laser/: input.deck
linear_breit_wheeler/useful_python_scripts/: check_photon_energy_threshold  test_whether_LBW_happens.ipynb
src/field_propagator/: injector_test.py  injector_test_ALFP.py  thiele_injector.py
src/jupyter_utility/: lbw_utility.py
src/other_util/: laser_physics.py
src/post_processing/: __init__.py  convert_sdf_to_hdf5.py  converter.py  dev_code.py  epoch_postprocess.py  plot_all_spectra.py  plot_energy_spectrum.py  plot_laser_intensity_spectrum.py  plot_xy_energy_heatmap.py
src/visualisation/: animate.py  dev_code.py  diana_visualisation.py  diana_visualisation_stable_version.py  diana_visualisation_test.py  plot_all_spectra.py  plot_laser_intensity_spectrum.py  plot_spectrum.py  save_2d_gif.py  visualise_spectra.py
test_2d/sdf_files/: deck.status  input.deck
test_moving_window/sdf_files/: deck.status  input.deck
test_moving_window_workshop/sdf_files/: deck.status  large.visit  normal.visit
(+52 files in other folders)
