[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Project_EPOCH"
version = "0.1.0"
authors = [
	{name = "Zheyuan Chen", email = "zheyuan.chen@york.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
	"epydeck>=1.0.1",
	"epyscan>=0.3.0",
	"matplotlib>=3.10.8",
	"matplotlib-inline>=0.2.1",
	"numpy>=2.4.1",
	"packaging>=25.0",
	"pandas>=2.3.3",
	"pip>=24.0",
	"scipy>=1.17.0",
	"sdf-xarray>=0.4.0",
	"sdfr>=1.4.11",
	"xarray>=2025.12.0",
	"h5py >= 3.15.1"
]

[project.scripts]
vis = "visualisation.diana_visualisation:run_cli"
sdf_converter = "post_processing.converter:main"
save_gif_2d ="visualisation.save_2d_gif:save_2d_animation_to_gif"
convert_test = "post_processing.dev_code:main"
vis_test = "visualisation.dev_code:run_cli"
examine_sdf = "post_processing.__init__:examine_data_structure"
plot_spectra = "post_processing.plot_all_spectra:main"
visualise_spectra = "visualisation.visualise_spectra:main"
a0 = "other_util.laser_physics:print_a_0"
chi_e = "other_util.laser_physics:print_chi_e"
omega = "other_util.laser_physics:print_ang_frequency"
nc = "other_util.laser_physics:print_critical_density"
P = "other_util.laser_physics:print_power"
